--- a/_config.yml
+++ b/_config.yml
@@ -4,6 +4,10 @@
 # which you are expected to set up once and rarely need to edit after that.
 # For technical reasons, this file is *NOT* reloaded automatically when you use
 # 'jekyll serve'. If you change this file, please restart the server process.
+#Sitemap
+gems:
+  - jekyll-sitemap
+  
 
 # Site settings
 title: AwenS.org
