Start migration to new domain

--- a/_config.yml
+++ b/_config.yml
@@ -10,10 +10,10 @@ gems:
   
 
 # Site settings
-title: AwenS.org
+title: awen.io
 description: The personal website for Awen Saunders
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://awens.org" # the base hostname & protocol for your site
+url: "https://awen.io" # the base hostname & protocol for your site
 github_username: "awensaunders"
 twitter_username: "awen_saunders"
 
